--- a/configuration/authentication.mdx
+++ b/configuration/authentication.mdx
@@ -1,21 +1,15 @@
 ---
-title: 'Single Sign-On (SSO) & 2FA'
-description: 'Customize how your team can sign in to QA.tech'
+title: 'Authentication Settings'
+description: 'Configure authentication for your QA.tech account'
 icon: 'user-unlock'
 ---
 
-## Two-Factor Authentication (2FA)
+## User Account Multi-Factor Authentication (MFA)
 
-Enable Multi-Factor Authentication to verify your identity for an extra layer of security to your account in case your password is compromised. In
-addition to entering your password, MFA requires you confirm your identity via SMS.
+Enable Multi-Factor Authentication to verify your identity for an extra layer of security to your QA.tech account in case your password is compromised. In addition to entering your password, MFA requires you confirm your identity via an authenticator app.
 
-You can enable 2FA under Settings / Authentication
-
-## Single Sign-On (SSO)
-
-QA.tech supports single sign-on to your dashboard via SAML, including Google Workspace, Microsoft Azure, Office 365, and university SSO systems. Your SSO provider must not have CAPTCHA enabled. 2FA works if you configure a Username + Password with 2FA config, though authenticator apps for MFA are not supported.
+You can enable MFA under **Project Settings** → **Profile** → **Authentication**.
 
 <Note>
-  SSO functionality is available on our enterprise plan. [Contact
-  us](https://qa.tech/contact) to learn more!
+This MFA setting secures your QA.tech account. For testing applications that require 2FA login, see [Two-Factor Authentication (2FA)](/best-practices/handle-auth#two-factor-authentication-2fa) in the best practices guide.
 </Note>
