docs: Add Run Status API documentation and update OpenAPI spec (QAT-4804)
- Add new api-reference/run-status.mdx page with complete API reference
- Update api-reference/api.json with GET /runs/{shortId} endpoint
- Fix POST /runs endpoint: correct response format, add notifications, short_id support
- Add polling best practices guidance
- Update CI/CD integration pages with Run Status API links
- Add GitLab blocking mode example with polling script
- Update navigation in mint.json

Refs QAT-4804

--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -98,6 +98,7 @@ QA.tech uses three different types of identifiers. Make sure you use the correct
 ## Next Steps
 
 - **[Start a Run](/api-reference/start-run)** - Trigger test runs programmatically
+- **[Get Run Status](/api-reference/run-status)** - Wait for test completion in CI/CD pipelines
 - **[Create Test Cases](/api-reference/test-cases)** - Create tests via API
 - **[View OpenAPI Spec](/api-reference/api.json)** - Complete API reference with all endpoints
 
