--- a/configuration/github-actions.mdx
+++ b/configuration/github-actions.mdx
@@ -169,7 +169,7 @@ jobs:
 
 ## Direct API Alternative
 
-If you prefer curl over the Action, see the [Start Run API Reference](/api-reference/start-run) for examples.
+If you prefer curl over the Action, use the [Start Run API](/api-reference/start-run) to trigger runs and the [Run Status API](/api-reference/run-status) for polling in non-blocking workflows.
 
 ## Related Documentation
 
