docs: comprehensive test-cases API documentation (QAT-4853)
- Reduced examples from 7 to 4 following documentarian rules
- Verified all examples against codebase (UUIDs, schemas, responses)
- Updated OpenAPI spec to match implementation
- Added cross-references from start-run and ci-cd-integration pages
- Enhanced dependencies explanation with links to core concepts

Refs QAT-4853

--- a/api-reference/start-run.mdx
+++ b/api-reference/start-run.mdx
@@ -366,6 +366,12 @@ This API endpoint works with any CI/CD system. For platform-specific guides and 
 - [GitLab CI](/configuration/gitlab) - GitLab CI/CD examples
 </Note>
 
+## Related Endpoints
+
+- [Create Test Case API](/api-reference/test-cases) - Create test cases programmatically before running them
+- [Get Run Status API](/api-reference/run-status) - Check run status and retrieve results
+- [API Introduction](/api-reference/introduction) - Authentication and general API information
+
 ## OpenAPI Specification
 
 For detailed API schema and additional examples, refer to the [OpenAPI specification](/api-reference/api.json).
