--- a/configuration/ci-cd-integration.mdx
+++ b/configuration/ci-cd-integration.mdx
@@ -13,7 +13,7 @@ QA.tech offers two integration modes for CI/CD:
 | **How it works** | You define test plans, trigger via API | AI analyzes PR, creates & runs tests |
 | **CI/CD Support** | Any system (GitLab, GitHub, Bitbucket, Azure DevOps, CircleCI, Jenkins) | GitHub only |
 | **Test Selection** | You choose which test plan to run | AI selects relevant tests automatically |
-| **Test Creation** | You create tests in QA.tech UI | AI creates tests for new functionality |
+| **Test Creation** | You create tests in QA.tech UI or [via API](/api-reference/test-cases) | AI creates tests for new functionality |
 | **Best For** | Regression testing, scheduled runs, deployment gates | Exploratory testing of new features |
 
 <Note>
