docs: update preview environments navigation path
- Update Settings → Environments link to Settings → Applications
- Reflects new UI structure where environments are under applications

--- a/core-concepts/preview-environments.mdx
+++ b/core-concepts/preview-environments.mdx
@@ -20,8 +20,7 @@ Preview environments are dynamically created environments that:
 <Steps>
   <Step title="Navigate to Environment Settings">
     Go to [**Settings →
-    Environments**](https://app.qa.tech/current-project/settings/environments)
-    in your project dashboard.
+    Applications**](https://app.qa.tech/current-project/settings/applications), select an application, then scroll to the Environments section.
   </Step>
   <Step title="Create Preview Environment">
     Click "Add Environment" and select "Preview Environment" as the type.
